--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bootstrap-sass": "^3.3.7",
     "cross-env": "^3.2.3",
     "jquery": "^3.5.1",
-    "laravel-mix": "^4.1.4",
+    "laravel-mix": "^5.0.9",
     "lodash": "^4.17.20",
     "sass-loader": "^7.3.1",
     "vue-template-compiler": "^2.6.12"
@@ -39,7 +39,7 @@
     "node-sass": "^4.14.1",
     "perfect-scrollbar": "^0.7.1",
     "select2": "^4.0.13",
-    "tinymce": "^5.5.1",
+    "tinymce": "5.5.1",
     "toastr": "^2.1.2",
     "vue": "^2.6.12"
   }
